[package]
name = "svt-av1-rs"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/rust-av/svt-av1-rs"
description = "High level bindings to SVT-AV1"

[features]
default = ["codec-trait"]
codec-trait = ["av-codec"]
build = ["svt-av1-sys/build_sources"]

[dependencies]
svt-av1-sys = { version = "0.1.0", path = "svt-av1-sys" }
av-data = { version = "0.2.0" }
av-codec = { version = "0.2.0", optional = true }


[workspace]
members = ["svt-av1-sys"]

